methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:5: error: not found: value vubiscuit
      vubiscuit=true
      ^MethodsReturning:14: error: Boolean does not take parameters
    if(!vuBiscuit()) {
                 ^